--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,48 @@
     transform: rotate(360deg);
   }
 }
+
+/*  signup css */
+.App {
+  text-align: center;
+}
+
+.label {
+  display: block;
+  font-size: larger;
+  color: white;
+  padding: 5px;
+}
+
+.input {
+  font-size: larger;
+  padding: 5px;
+  margin: 2px;
+}
+.btn {
+  color: white;
+  background-color: black;
+  border-radius: 5px;
+  font-size: larger;
+  display: block;
+  padding: 8px 90px;
+  margin: 30px auto;
+}
+
+.messages {
+  display: flex;
+  justify-content: center;
+}
+
+.form {
+  border: 1px solid rgb(0, 0, 0, 0.1);
+  max-width: 35%;
+  margin: auto;
+  padding: 30px 0px;
+  border-radius: 7px;
+  margin-top: 50px;
+}
+
+.form > div > h1 {
+  font-weight: 500;
+}
